--- a/DAY5 - Blurry Loading/index.html
+++ b/DAY5 - Blurry Loading/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/25bc9f2d05.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/25bc9f2d05.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Blurry Loading</title>
-</head>
+  </head>
 
-<body>
-    <div class="bg">
-
-
-
-    </div   >
-    <div class  =  "loading-text">0%</div>
+  <body>
+    <div class="bg"></div>
+    <div class="loading-text">0%</div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
